--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Menu CSS jQuery</title>
 	<meta charset="utf-8">
-	<meta name="author" content="Tadashi - 2L11">
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script>
 	$(document).ready(function(){
 		$('#menu ul li').prepend('<span></span>');
@@ -14,47 +14,51 @@
 			});
 			$('#menu ul li').hover(function(){
 				$(this).find('span').stop().animate({
-					marginTop:"-40px"
-				},400);
+					marginLeft: "10"
+				},200);
 			},function(){
 				$(this).find('span').stop().animate({
-					marginTop:"0px"
-				},300);
+					marginLeft:"0px"
+				},200);
 			});
 	});
-	
-	$(document).ready(function(){
-    	$("button").click(function(){
-    	  $("div").animate({left: '250px'});
-    });
-});
 	</script>
 
 	<style>
-		body{background:black;
+	
+		body{
+			background: #f1f;
 			}
-		#menu{width:700px;
+		#menu{
+			/*width:700px;*/
+			width: 70%;
 			margin:auto;
            	}
 		#menu ul{list-style:none;
-			font-size:18px; /*18px/16px=1.125em  */
-			font-family:"Hobo Std";
+			font-size: 1.125em;
+			font-family:"Arial";
 			margin:0px;
 			padding:0px;
 			height:40px;
 			overflow:hidden;
+			width: 200px;
+			margin: auto;
+			height: 100%;
+			
 			}
 		#menu ul li{float:left;
+			height: 40px;
 			}
 		#menu ul li a, #menu ul li span{width:100px;
 			padding:10px 20px;
 			height:18px;
 			color:#FFFFFF;
 			/*background:url("images/Degrade_img.jpg") repeat-x; */
-            background:red;
+			background: black;
 			text-decoration:none;
 			overflow:hidden;
 			text-align:center;
+			color: #0099ff;
 			}
 		#menu ul li span{
 			display:block;
@@ -62,13 +66,9 @@
 			}
 		#menu ul li a{
 			float:left;
-			background:url("image/Degrade_img.jpg") repeat-x left bottom;
-			color:#000000;
+			background:url("Degrade_img.jpg") repeat-x left bottom;
             height:10px;
 			}
-		
-		}
-		
 	</style>
 </head>
 <body>
@@ -81,9 +81,5 @@
 			<li><a href="#">Contato</a></li>
 		</ul>
 	</div>
-	
-	<button>Start Animation</button>
-<div style="background:#98bf21;height:100px;width:100px;position:absolute;"></div>
-
 </body>
 </html>
